[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/ViewCollider.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/interactive/mushroom.gd" type="Script" id=2]
[ext_resource path="res://addons/wwise/runtime/nodes/ak_event.gd" type="Script" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.976471, 0.619608, 0, 1 )

[node name="Mushroom" type="Spatial"]
script = ExtResource( 2 )

[node name="PlaceHolder" type="CSGMesh" parent="."]
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="ViewCollider" parent="." instance=ExtResource( 1 )]
collider_type = 3

[node name="AkEvent" type="Spatial" parent="."]
script = ExtResource( 3 )
event = {
"Id": 2103799123,
"Name": "MUSHROOMEAT"
}

[connection signal="interacted" from="ViewCollider" to="." method="_on_ViewCollider_interacted"]
[connection signal="looked_at" from="ViewCollider" to="." method="_on_ViewCollider_looked_at"]
[connection signal="stop_looked_at" from="ViewCollider" to="." method="_on_ViewCollider_stop_looked_at"]
